--- a/NonNativePred.html
+++ b/NonNativePred.html
@@ -72,11 +72,16 @@
 
 											<ul> 
 												<li> Related works
-													<ul> Detmer, T.M.*, Airey, M.E.*, Jirka, K.J., Randall, E.A., Zarri, L.J., McIntyre, P.B., Kraft, C.E. (2025). Community-wide transient dynamics of lake fish populations in response to two decades of suppressing an invasive predator. Journal of Applied Ecology. <a class = "link" href = "https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/1365-2664.70064">Check out our recent paper!</a></ul>
 
-													<ul> Zarri, L.J., Kraft, C.E., McIntyre, P.B., Baetscher, D.S., Jirka, K.J., Randall, E.A., Marcy-Quay, B , St. John, C.A., Sethi, S.A., Airey, M.E. , Detmer, T.M., Flecker, A.S., Therkildsen, N.O.. (2025). Rapid evolution impedes eradication of an introduced predator. Proceedings of the National Academy of Sciences. <a class = "link" href = "https://www.pnas.org/doi/abs/10.1073/pnas.2424067122">Check out a collaborator's evolutionary perspective on this predator removal!</a></ul>
+												<ul>
+													<li> Detmer, T.M.*, Airey, M.E.*, Jirka, K.J., Randall, E.A., Zarri, L.J., McIntyre, P.B., Kraft, C.E. (2025). Community-wide transient dynamics of lake fish populations in response to two decades of suppressing an invasive predator. Journal of Applied Ecology. <a class = "link" href = "https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/1365-2664.70064">Check out our recent paper!</a></li>
+
+													<li> Zarri, L.J., Kraft, C.E., McIntyre, P.B., Baetscher, D.S., Jirka, K.J., Randall, E.A., Marcy-Quay, B , St. John, C.A., Sethi, S.A., Airey, M.E. , Detmer, T.M., Flecker, A.S., Therkildsen, N.O.. (2025). Rapid evolution impedes eradication of an introduced predator. Proceedings of the National Academy of Sciences. <a class = "link" href = "https://www.pnas.org/doi/abs/10.1073/pnas.2424067122">Check out a collaborator's evolutionary perspective on this predator removal!</a></li>
+
+												</ul>
 
 												</li>
+											</ul>
 
 
 
