adding habitat use page

--- a/TrophicDiversity.html
+++ b/TrophicDiversity.html
@@ -60,6 +60,28 @@
 
 									<p> Habitat and movement determine when, where, and how species interact, shaping the structure and dynamics of aquatic communities. My research combines otolith microchemistry with multi-scale catch data to uncover the patterns and drivers of fish distributions. By linking the movements of individual fishes across habitats to population-level patterns across entire landscapes, I connect local community dynamics to broader ecological processes. These insights are especially important in the face of climate change and species invasions, which are reshaping habitats and altering the ways organisms move, interact, and persist. </p>
 
+									<h3> Lionfish Movement across thermal habitat </h3>
+
+									Invasive lionfish threaten native reef ecosystems throughout the Atlantic. Using otolith microchemistry, we trace the habitats lionfish occupy over their lifetimes, revealing how they move across reef and seagrass environments. This work sheds light on the mechanisms that allow invasive predators to spread and persist in new ecosystems.
+
+
+											<ul> 
+												<li> Related works
+
+												<ul>
+												
+													<li> Airey, ME., Fogg, AQ., Drew, JA..(2023). Invasive lionfish dispersal between shallow- and deep-water habitats within coastal Floridian waters. Biological Invasions. <a class = "link" href = https://link.springer.com/article/10.1007/s10530-023-03153-w></a>Check it out here!</a></li>
+
+												</ul>
+
+												</li>
+											</ul>
+
+
+									<h3> Thermal Habitat use of native lake fishes </h3>
+
+
+
 																		
 								</article>
 
