adding habitat use page

--- a/TrophicDiversity.html
+++ b/TrophicDiversity.html
@@ -70,7 +70,7 @@
 
 												<ul>
 												
-													<li> Airey, ME., Fogg, AQ., Drew, JA..(2023). Invasive lionfish dispersal between shallow- and deep-water habitats within coastal Floridian waters. Biological Invasions. <a class = "link" href = https://link.springer.com/article/10.1007/s10530-023-03153-w></a>Check it out here!</a></li>
+													<li> Airey, ME., Fogg, AQ., Drew, JA..(2023). Invasive lionfish dispersal between shallow- and deep-water habitats within coastal Floridian waters. Biological Invasions. <a class = "link" href = "https://link.springer.com/article/10.1007/s10530-023-03153-w"> Check it out here!</a></li>
 
 												</ul>
 
@@ -90,7 +90,8 @@
 
 									Catch data provide a powerful window into how fish use habitats within lakes and across broader landscapes. By analyzing spatial patterns of abundance and habitat preferences, we uncover the drivers of fish distributions and the ways species link sites, habitats, and ecosystems. These insights highlight how local communities fit into larger-scale ecological networks.
 
-									Stay tuned for our work that analyzes site and habitat use across 20 years in a system with continuing invasive species management. Or check out <a class = "link" href = https://link.springer.com/article/10.1007/s10750-025-05958-3></a> recent work </a> conducted by a mentee that investigates how benthic macroinvertebrate communities are influenced by artificial wood! 
+									Stay tuned for our work that analyzes site and habitat use across 20 years in a system with continuing invasive species management. Or check out <a class="link" href="https://link.springer.com/article/10.1007/s10750-025-05958-3" target="_blank" rel="noopener noreferrer">recent work</a> conducted by a mentee that investigates how benthic macroinvertebrate communities are influenced by artificial wood!
+
 
 
 																		
