adding habitat use page

--- a/TrophicDiversity.html
+++ b/TrophicDiversity.html
@@ -80,17 +80,17 @@
 
 									<h3> Thermal Habitat use of native lake fishes </h3>
 
-									Freshwater fishes are often classified into thermal guilds, groups of species adapted to particular temperature ranges, but individual behaviors can deviate from these expected norms. Using otolith microchemistry combined with environmental data, we track how species utilize thermal habitats, revealing both individual ecologies and the thermal flexibility of each species. These patterns help us understand how thermal behavior influences species interactions, community structure, and resilience to climate change.
+									<p> Freshwater fishes are often classified into thermal guilds, groups of species adapted to particular temperature ranges, but individual behaviors can deviate from these expected norms. Using otolith microchemistry combined with environmental data, we track how species utilize thermal habitats, revealing both individual ecologies and the thermal flexibility of each species. These patterns help us understand how thermal behavior influences species interactions, community structure, and resilience to climate change.</p>
 
-									We are currently analyzing how a recreationally important, cold-water fish, Brook Trout utilize thermal habitat across a broad range of mixing regimes in Adirondack lakes. Paired with characterizing the thermal habitat use of a whole community of lake fish, we explore thermal guild flexability and fidelity.
+									<p>We are currently analyzing how a recreationally important, cold-water fish, Brook Trout utilize thermal habitat across a broad range of mixing regimes in Adirondack lakes. Paired with characterizing the thermal habitat use of a whole community of lake fish, we explore thermal guild flexability and fidelity.</p>
 
 
 
 									<h3> Habitat use acros lakes and landscapes </h3>
 
-									Catch data provide a powerful window into how fish use habitats within lakes and across broader landscapes. By analyzing spatial patterns of abundance and habitat preferences, we uncover the drivers of fish distributions and the ways species link sites, habitats, and ecosystems. These insights highlight how local communities fit into larger-scale ecological networks.
+									<p>Catch data provide a powerful window into how fish use habitats within lakes and across broader landscapes. By analyzing spatial patterns of abundance and habitat preferences, we uncover the drivers of fish distributions and the ways species link sites, habitats, and ecosystems. These insights highlight how local communities fit into larger-scale ecological networks. </p>
 
-									Stay tuned for our work that analyzes site and habitat use across 20 years in a system with continuing invasive species management. Or check out <a class="link" href="https://link.springer.com/article/10.1007/s10750-025-05958-3" target="_blank" rel="noopener noreferrer">recent work</a> conducted by a mentee that investigates how benthic macroinvertebrate communities are influenced by artificial wood!
+									<p> Stay tuned for our work that analyzes site and habitat use across 20 years in a system with continuing invasive species management. Or check out <a class="link" href="https://link.springer.com/article/10.1007/s10750-025-05958-3" target="_blank" rel="noopener noreferrer">recent work</a> conducted by a mentee that investigates how benthic macroinvertebrate communities are influenced by artificial wood! </p>
 
 
 
